Fix selected tab overlap from blocking clicks

--- a/client/src/components/styles/QuestLogSelector.css
+++ b/client/src/components/styles/QuestLogSelector.css
@@ -76,6 +76,7 @@
 
 .Tab.Selected .overlap {
     visibility: visible;
+    pointer-events: none;
 }
 
 .Tab .overlap.left {
